prevent overflows on carousel panels

--- a/src/less/carousel.less
+++ b/src/less/carousel.less
@@ -40,8 +40,10 @@
     position: absolute;
     padding: @padding-large-vertical;
     max-width: 400px;
+    max-height: 300px;
     background-color: rgba(0, 0, 0, 0.8);
     border: 1px solid @gray-dark;
+    overflow: hidden;
   }
 
   .carousel-caption {
